navbar, sortby function added

--- a/public/data/appointments.json
+++ b/public/data/appointments.json
@@ -18,5 +18,15 @@
         "petOwner":"Hassum Harrod",
         "aptDate":"2017-07-20 15:30",
         "aptNotes":"This Chihuahua has not eaten for three days and is lethargic"
+    },
+    {"petName":"Zelda",
+        "petOwner":"Link",
+        "aptDate":"2017-07-23 9:35",
+        "aptNotes":"She is missing again lately..."
+    },
+    {"petName":"Luigi",
+        "petOwner":"Daisy",
+        "aptDate":"2017-07-24 12:30",
+        "aptNotes":"The hero we don't deserve has been sick and need medical care"
     }
   ]
